--- a/dev/scss/header.scss
+++ b/dev/scss/header.scss
@@ -97,7 +97,7 @@
       gap: 0 1.5rem;
     }
     &-boat-photo{
-      transition: 0.3s;
+      transition: 0.5s;
       &:hover{
         cursor: pointer;
         opacity: 0.8;
@@ -140,6 +140,7 @@
       max-width: 3rem;
       max-height: 3rem;
       transition: 0.3s;
+      margin-right: -1rem;
       &:hover{
         cursor: pointer;
         transform: scale(1.1);
@@ -193,3 +194,5 @@
 .logo-name {
   margin-left: 7.9rem;
 }
+
+  
