--- a/dev/scss/header.scss
+++ b/dev/scss/header.scss
@@ -41,6 +41,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 2.4rem 0;
+    gap: 0 5rem;
   }
   &__nav {
     &-list {
