--- a/dev/scss/header.scss
+++ b/dev/scss/header.scss
@@ -1,16 +1,30 @@
 .header {
-  &__first-section {
-    background-color: $whiteColor;
-    &-content {
-      padding: 1.25rem 0;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+  background-color: $whiteColor;
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 7.9rem;
   }
+
   &__menu {
     display: none;
   }
+
+
+  &__profile-photo-language {
+    display: flex;
+    align-items: center;
+    gap: 0 1.925rem;
+  }
+
+  .profile-photo {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
   &__language {
     font-style: normal;
     font-weight: 400;
@@ -18,326 +32,27 @@
     line-height: 1.9rem;
     text-align: center;
     color: $textColor;
-    padding-left: 1.5rem;
     transition: 0.3s;
+
     &:hover {
       cursor: pointer;
       opacity: 0.8;
     }
-  }
-  &__profile-photo-language {
-    display: flex;
-    align-items: center;
-    margin-right: 7.9rem;
-  }
-  .profile-photo {
-    &:hover {
-      cursor: pointer;
-    }
-  }
-  &__second-section {
-    background-color: $headerBgColor;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2.4rem 0;
-    gap: 0 5rem;
-  }
-  &__nav {
-    &-list {
-      display: flex;
-      flex-wrap: wrap;
-    }
-    &-item {
-      display: flex;
-      align-items: center;
-      padding: 1rem 1rem;
-      transition: 0.3s;
-      &:hover {
-        background-color: $hoverBgColor;
-        border-radius: 1rem;
-      }
-      &:hover .header__nav-item-text {
-        color: $whiteColor;
-      }
-      &:hover .header__nav-item-icon {
-        fill-opacity: 1;
-      }
-      &:hover .header__nav-item-dropdown {
-        fill-opacity: 1;
-      }
-      &-text {
-        font-style: normal;
-        font-weight: 500;
-        font-size: 1.4rem;
-        line-height: 1.4rem;
-        color: $navTextColor;
-      }
-      &-visible {
-        display: flex;
-        align-items: center;
-        padding: 1rem 1rem;
-        transition: 0.3s;
-        &:hover {
-          background-color: $hoverBgColor;
-          border-radius: 1rem;
-        }
-        &:hover .header__nav-item-text {
-          color: $whiteColor;
-        }
-        &:hover .header__nav-item-icon {
-          fill-opacity: 1;
-        }
-        &:hover .header__nav-item-dropdown {
-          fill-opacity: 1;
-        }
-      }
-    }
-    &-link {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      gap: 0 1rem;
-    }
-  }
-  &__plus-icon {
-    transition: 0.3s;
-    &:hover {
-      cursor: pointer;
-      opacity: 0.8;
-    }
-  }
-  &__third-section {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 4.8rem;
-  }
-  &__button-arrow {
-    transition: 0.3s;
-    &:hover {
-      cursor: pointer;
-      transform: scale(1.1);
-    }
-  }
-  &__info-card {
-    display: flex;
-    align-items: center;
-    gap: 0 1.5rem;
-    margin-left: 4.8rem;
-    &-content {
-      display: flex;
-      gap: 0 1.5rem;
-    }
-    &-boat-photo {
-      transition: 0.5s;
-      &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-        transform: scale(1.1);
-      }
-    }
-    &-flag-title-profiles {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-    }
-    &-flag-title {
-      display: flex;
-      align-items: center;
-      gap: 0 1rem;
-    }
-    &-title {
-      font-style: normal;
-      font-weight: 500;
-      font-size: 2.4rem;
-      line-height: 116%;
-      color: $textColor;
-    }
-    &-flag {
-      transition: 0.3s;
-      &:hover {
-        cursor: pointer;
-        opacity: 0.6;
-      }
-    }
-    &-profiles {
-      display: flex;
-      position: relative;
-    }
-    &-profile-photo {
-      border: 0.2rem solid $whiteColor;
-      border-radius: 50%;
-      height: 100%;
-      width: 100%;
-      max-width: 3rem;
-      max-height: 3rem;
-      transition: 0.3s;
-      margin-right: -1rem;
-      &:hover {
-        cursor: pointer;
-        transform: scale(1.1);
-      }
-    }
-    &-profile-photo-button {
-      border: 0.2rem solid $whiteColor;
-      border-radius: 50%;
-      width: 3.5rem;
-      height: 3.5rem;
-      color: $whiteColor;
-      background-color: $textColor;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 1.4rem;
-      line-height: 1.4rem;
-      transition: 0.3s;
-      &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-      }
-    }
-  }
-  &__downloader {
-    display: flex;
-    align-items: flex-end;
-    &-icon-text {
-      display: flex;
-      padding: 1rem 3.4rem;
-      gap: 0 1.5rem;
-      border: 0.1rem solid $textColor;
-      border-radius: 0.8rem;
-      margin-right: 4.8rem;
-      background-color: $whiteColor;
-      transition: 0.3s;
-      &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-      }
-    }
-    &-text {
-      font-style: normal;
-      font-weight: 500;
-      font-size: 1.4rem;
-      line-height: 2rem;
-      letter-spacing: 0.1em;
-      color: $textColor;
-    }
-  }
-  &__title{
-    display: none;
   }
 }
-.logo-name {
-  margin-left: 7.9rem;
+
+.logo {
+  padding: 1.8rem 0;
 }
 
 @media screen and (max-width: 1199px) {
-  .logo-name {
-    margin-left: 1.6rem;
-  }
   .header {
-    &__logo-image-link {
-      display: none;
+    &__content {
+      padding: 0 1.6rem;
     }
-    &__profile-photo-language {
-      margin-right: 1.6rem;
-    }
+
     &__language {
       display: none;
-    }
-    &__second-section {
-      display: flex;
-      justify-content: space-between;
-      padding: 0.6rem 0;
-    }
-    &__menu {
-      display: block;
-      transition: 0.3s;
-      margin-left: 1.5rem;
-      &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-      }
-    }
-    &__nav {
-      position: absolute;
-      margin-left: 3.5rem;
-      &-item {
-        display: none;
-        &-visible {
-          transition: 0.3s;
-          &:hover {
-            background-color: transparent;
-          }
-          &:hover .header__nav-item-icon {
-            opacity: 0.8;
-          }
-          &:hover .header__nav-item-text {
-            opacity: 0.8;
-          }
-          &:hover .header__nav-item-dropdown {
-            opacity: 0.8;
-          }
-        }
-        &-icon {
-          fill-opacity: 1;
-        }
-        &-text {
-          color: $whiteColor;
-        }
-        &-dropdown {
-          fill-opacity: 1;
-        }
-      }
-    }
-    &__plus-icon {
-      margin-right: 1.5rem;
-    }
-    &__third-section {
-      margin-top: 1.6rem;
-    }
-    &__button-arrow {
-      max-width: 2.4rem;
-      height: 2.4rem;
-    }
-    &__info-card {
-      margin-left: 1.6rem;
-      &-boat-photo {
-        max-width: 5.6rem;
-        max-height: 5.6rem;
-      }
-      &-title {
-        font-size: 1.6rem;
-      }
-      &-profile-photo-hidden {
-        display: none;
-      }
-    }
-    &__downloader {
-      &-icon-text {
-        margin-right: 1.6rem;
-      }
-    }
-  }
-}
-@media screen and (max-width: 619px) {
-  .header {
-    &__third-section {
-      flex-direction: column;
-      align-items: center;
-    }
-    &__info-card {
-      margin-left: 0;
-    }
-    &__title {
-      display: block;
-      font-family: "Roboto";
-      font-style: normal;
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 115%;
-      text-transform: uppercase;
-      color: $textColor;
-      margin:1.6rem 0;
     }
   }
 }
