--- a/dev/scss/variablies.scss
+++ b/dev/scss/variablies.scss
@@ -1,6 +1,6 @@
-$whiteColor:#ffffff;
-$textColor:#351F73;
-$headerBgColor:#46A6A4;
-$navTextColor:rgba(255, 255, 255, 0.72);
-$hoverBgColor:rgba(53, 31, 115, 0.2);
-$bgColor:#E9E9E9;
+$whiteColor: #ffffff;
+$textColor: #351F73;
+$menuBgColor: #46A6A4;
+$navTextColor: rgba(255, 255, 255, 0.72);
+$hoverBgColor: rgba(53, 31, 115, 0.2);
+$bgColor: #E9E9E9;
