--- a/dev/scss/boats.scss
+++ b/dev/scss/boats.scss
@@ -1,139 +1,211 @@
 .boats {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4.8rem;
+  padding: 0 4.8rem;
+
+  &__button {
     display: flex;
-    justify-content: space-between;
-    margin-top: 4.8rem;
+    align-items: center;
+    border: none;
+    background-color: $bgColor;
+    transition: 0.3s;
+    border-radius: 0.4rem;
+    width: 4rem;
+    height: 4rem;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $bgButton;
+      transform: scale(1.1);
+    }
+  }
+
+  &__info-card {
+    display: flex;
+    align-items: center;
+    gap: 0 1.5rem;
+
+    &-content {
+      display: flex;
+      gap: 0 1.5rem;
+    }
+
+    &-boat-photo {
+      transition: 0.5s;
+      max-width: 9.6rem;
+      max-height: 9.6rem;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 0.8;
+      }
+    }
+
+    &-flag-title-profiles {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &-flag-title {
+      display: flex;
+      align-items: center;
+      gap: 0 1rem;
+      padding-top: 0.8rem;
+    }
+
+    &-title {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 2.4rem;
+      line-height: 116%;
+      color: $textColor;
+    }
+
+    &-flag {
+      transition: 0.3s;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 0.6;
+      }
+    }
+
+    &-profiles {
+      display: flex;
+      position: relative;
+      padding-top: 0.8rem;
+    }
+
+    &-profile-photo {
+      border: 0.2rem solid $whiteColor;
+      border-radius: 50%;
+      height: 100%;
+      width: 100%;
+      max-width: 3rem;
+      max-height: 3rem;
+      transition: 0.8s;
+      margin-right: -1rem;
+
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+    }
+
+    &-profile-photo-button {
+      border: 0.2rem solid $whiteColor;
+      border-radius: 50%;
+      width: 3.5rem;
+      height: 3.5rem;
+      color: $whiteColor;
+      background-color: $textColor;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 1.4rem;
+      line-height: 1.4rem;
+      transition: 0.3s;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 0.9;
+      }
+    }
+  }
+
+  &__downloader {
+    display: flex;
+    align-items: flex-end;
+
+    &-button {
+      display: flex;
+      padding: 1rem 3.4rem;
+      gap: 0 1.5rem;
+      border: 0.1rem solid $textColor;
+      border-radius: 0.8rem;
+      background-color: $whiteColor;
+      transition: 0.3s;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 0.8;
+      }
+    }
+
+    &-text {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 1.4rem;
+      line-height: 2rem;
+      letter-spacing: 0.1em;
+      color: $textColor;
+    }
+  }
+
+  &__title {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .boats {
+    margin-top: 1.6rem;
 
     &__button {
-        transition: 0.3s;
-
-        &:hover {
-            cursor: pointer;
-            transform: scale(1.1);
-        }
     }
 
     &__info-card {
-        display: flex;
+      &-content {
         align-items: center;
-        gap: 0 1.5rem;
-        margin-left: 4.8rem;
+      }
 
-        &-content {
-            display: flex;
-            gap: 0 1.5rem;
+      &-boat-photo {
+        max-width: 5.6rem;
+        max-height: 5.6rem;
+
+        &-image {
+          width: 100%;
         }
+      }
 
-        &-boat-photo {
-            transition: 0.5s;
+      &-title {
+        font-size: 1.6rem;
+      }
 
-            &:hover {
-                cursor: pointer;
-                opacity: 0.8;
-                transform: scale(1.1);
-            }
-        }
-
-        &-flag-title-profiles {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-        }
-
-        &-flag-title {
-            display: flex;
-            align-items: center;
-            gap: 0 1rem;
-        }
-
-        &-title {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 2.4rem;
-            line-height: 116%;
-            color: $textColor;
-        }
-
-        &-flag {
-            transition: 0.3s;
-
-            &:hover {
-                cursor: pointer;
-                opacity: 0.6;
-            }
-        }
-
-        &-profiles {
-            display: flex;
-            position: relative;
-        }
-
-        &-profile-photo {
-            border: 0.2rem solid $whiteColor;
-            border-radius: 50%;
-            height: 100%;
-            width: 100%;
-            max-width: 3rem;
-            max-height: 3rem;
-            transition: 0.3s;
-            margin-right: -1rem;
-
-            &:hover {
-                cursor: pointer;
-                transform: scale(1.1);
-            }
-        }
-
-        &-profile-photo-button {
-            border: 0.2rem solid $whiteColor;
-            border-radius: 50%;
-            width: 3.5rem;
-            height: 3.5rem;
-            color: $whiteColor;
-            background-color: $textColor;
-            font-style: normal;
-            font-weight: 500;
-            font-size: 1.4rem;
-            line-height: 1.4rem;
-            transition: 0.3s;
-
-            &:hover {
-                cursor: pointer;
-                opacity: 0.8;
-            }
-        }
+      &-profile-photo-hidden {
+        display: none;
+      }
     }
 
     &__downloader {
-        display: flex;
-        align-items: flex-end;
+      &-icon-text {
+        margin-right: 1.6rem;
+      }
+    }
+  }
+}
 
-        &-icon-text {
-            display: flex;
-            padding: 1rem 3.4rem;
-            gap: 0 1.5rem;
-            border: 0.1rem solid $textColor;
-            border-radius: 0.8rem;
-            margin-right: 4.8rem;
-            background-color: $whiteColor;
-            transition: 0.3s;
+@media screen and (max-width: 619px) {
 
-            &:hover {
-                cursor: pointer;
-                opacity: 0.8;
-            }
-        }
+  .boats {
+    flex-direction: column;
+    align-items: center;
 
-        &-text {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 1.4rem;
-            line-height: 2rem;
-            letter-spacing: 0.1em;
-            color: $textColor;
-        }
+
+    &__info-card {
+      margin-left: 0;
     }
 
     &__title {
-        display: none;
+      display: block;
+      font-family: "Roboto";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 115%;
+      text-transform: uppercase;
+      color: $textColor;
+      margin: 1.6rem 0;
     }
+  }
 }
