--- a/dev/scss/variablies.scss
+++ b/dev/scss/variablies.scss
@@ -4,3 +4,4 @@ $menuBgColor: #46A6A4;
 $navTextColor: rgba(255, 255, 255, 0.72);
 $hoverBgColor: rgba(53, 31, 115, 0.2);
 $bgColor: #E9E9E9;
+$bgButton: #E0E0E0;
