--- a/dev/scss/boats.scss
+++ b/dev/scss/boats.scss
@@ -6,6 +6,7 @@
 
   &__button {
     display: flex;
+    justify-content: center;
     align-items: center;
     border: none;
     background-color: $bgColor;
