--- a/dev/scss/boats.scss
+++ b/dev/scss/boats.scss
@@ -64,8 +64,8 @@
     }
 
     &-flag {
-      max-width: 3.2rem;
-      max-height: 1.8rem;
+      width: 3.2rem;
+      height: 1.8rem;
       transition: 0.3s;
 
       &:hover {
