--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -11,7 +11,8 @@ body {
 }
 
 .container {
-  max-width: 1920px
+  max-width: 1920px;
+  margin: 0 auto;
 }
 
 @import 'header.scss';
@@ -19,141 +20,3 @@ body {
 @import 'boats.scss';
 
 
-// @media screen and (max-width: 1199px) {
-//   .logo {
-//     margin-left: 1.6rem;
-//   }
-
-//   .header {
-//     &__logo-image-link {
-//       display: none;
-//     }
-
-//     &__profile-photo-language {
-//       margin-right: 1.6rem;
-//     }
-
-//     &__language {
-//       display: none;
-//     }
-
-//     &__second-section {
-//       display: flex;
-//       justify-content: space-between;
-//       padding: 0.6rem 0;
-//     }
-
-//     &__menu {
-//       display: block;
-//       transition: 0.3s;
-//       margin-left: 1.5rem;
-
-//       &:hover {
-//         cursor: pointer;
-//         opacity: 0.8;
-//       }
-//     }
-
-//     &__nav {
-//       position: absolute;
-//       margin-left: 3.5rem;
-
-//       &-item {
-//         display: none;
-
-//         &-visible {
-//           transition: 0.3s;
-
-//           &:hover {
-//             background-color: transparent;
-//           }
-
-//           &:hover .header__nav-item-icon {
-//             opacity: 0.8;
-//           }
-
-//           &:hover .header__nav-item-text {
-//             opacity: 0.8;
-//           }
-
-//           &:hover .header__nav-item-dropdown {
-//             opacity: 0.8;
-//           }
-//         }
-
-//         &-icon {
-//           fill-opacity: 1;
-//         }
-
-//         &-text {
-//           color: $whiteColor;
-//         }
-
-//         &-dropdown {
-//           fill-opacity: 1;
-//         }
-//       }
-//     }
-
-//     &__plus-icon {
-//       margin-right: 1.5rem;
-//     }
-
-//     &__third-section {
-//       margin-top: 1.6rem;
-//     }
-
-//     &__button-arrow {
-//       max-width: 2.4rem;
-//       height: 2.4rem;
-//     }
-
-//     &__info-card {
-//       margin-left: 1.6rem;
-
-//       &-boat-photo {
-//         max-width: 5.6rem;
-//         max-height: 5.6rem;
-//       }
-
-//       &-title {
-//         font-size: 1.6rem;
-//       }
-
-//       &-profile-photo-hidden {
-//         display: none;
-//       }
-//     }
-
-//     &__downloader {
-//       &-icon-text {
-//         margin-right: 1.6rem;
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 619px) {
-//   .header {
-//     &__third-section {
-//       flex-direction: column;
-//       align-items: center;
-//     }
-
-//     &__info-card {
-//       margin-left: 0;
-//     }
-
-//     &__title {
-//       display: block;
-//       font-family: "Roboto";
-//       font-style: normal;
-//       font-weight: 500;
-//       font-size: 24px;
-//       line-height: 115%;
-//       text-transform: uppercase;
-//       color: $textColor;
-//       margin: 1.6rem 0;
-//     }
-//   }
-// }
