--- a/dev/scss/variablies.scss
+++ b/dev/scss/variablies.scss
@@ -5,3 +5,4 @@ $navTextColor: rgba(255, 255, 255, 0.72);
 $hoverBgColor: rgba(53, 31, 115, 0.2);
 $bgColor: #E9E9E9;
 $bgButton: #E0E0E0;
+$yellowBg: #FDEFC8;
