--- a/dev/scss/variablies.scss
+++ b/dev/scss/variablies.scss
@@ -1,8 +1,11 @@
 $whiteColor: #ffffff;
 $textColor: #351F73;
+$grayText: #828282;
 $menuBgColor: #46A6A4;
 $navTextColor: rgba(255, 255, 255, 0.72);
 $hoverBgColor: rgba(53, 31, 115, 0.2);
 $bgColor: #E9E9E9;
 $bgButton: #E0E0E0;
 $yellowBg: #FDEFC8;
+$controlBg: #F5F5F5;
+$dropdownFill: #828282;
