--- a/dev/scss/variablies.scss
+++ b/dev/scss/variablies.scss
@@ -9,3 +9,9 @@ $bgButton: #E0E0E0;
 $yellowBg: #FDEFC8;
 $controlBg: #F5F5F5;
 $dropdownFill: #828282;
+$greenTaskBlock: #3AAE27;
+$pinkTaskBlock: #FF5F5F;
+$violeteTaskBlock: #BF70B7;
+$redColor: #D70000;
+$unassignedBg: #FBE7E8;
+$grayTaskBlock: #828282;
