--- a/dev/scss/mixines.scss
+++ b/dev/scss/mixines.scss
@@ -12,3 +12,9 @@
   font-size: 1.4rem;
   line-height: 1.6rem;
 }
+
+@media screen and (max-width: 1500px) {
+  %colorBlocksProperties {
+    width: 100%;
+  }
+}
