--- a/dev/scss/mixines.scss
+++ b/dev/scss/mixines.scss
@@ -18,3 +18,10 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 987px) {
+  %colorBlocksProperties {
+    width: 16.1rem;
+    height: 9.5rem;
+  }
+}
