--- a/dev/scss/tasks.scss
+++ b/dev/scss/tasks.scss
@@ -31,6 +31,10 @@
   border: 0.1rem solid #E0E0E0;
   border-radius: 0.8rem;
 
+  &_sm {
+    display: none;
+  }
+
   &__button {
     border: none;
     background-color: transparent;
@@ -361,5 +365,71 @@
 @media screen and (max-width: 1500px) {
   .select {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 987px) {
+  .tasks {
+    &__heading {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0.4rem 0;
+    }
+  }
+  .control-panel {
+    display: none;
+
+    &_sm {
+      display: flex;
+      max-width: 32.2rem;
+    }
+  }
+  .control-panel {
+    padding: 0 2.117rem;
+
+    &__button_checked {
+      padding: 1rem 2.317rem;
+    }
+  }
+}
+
+@media screen and (max-width: 745px) {
+  .tasks {
+    padding: 1.6rem;
+  }
+  .color-tasks-blocks {
+    padding: 1.6rem 0;
+
+    &__title {
+      padding-top: 1.2rem;
+      padding-left: 1.2rem;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 1.4rem;
+      line-height: 1.6rem;
+    }
+
+    &__tasks-sum {
+      padding: 0.8rem 1.2rem 1.2rem 1.2rem;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 4rem;
+      line-height: 4.7rem;
+    }
+
+    &__text {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1.2rem;
+      line-height: 120%;
+    }
+
+    &__button {
+      left: 74%;
+      top: 8%;
+    }
+  }
+  .assignee-congestion {
+    display: none;
   }
 }
